# jufi-backend

./: .gitignore  ADMIN_AUTH_FLOW.md  Dockerfile  README.md  aprobacion_montos.py  bank_accounts.py  ca-certificate.crt  dashboard.py  flyway.do.conf  flyway.local.conf  main.py  obligaciones.py  pyproject.toml  users.py
bruno/: 01 Auth - Health.bru  01 Health.bru  02 Auth - Registrar Usuario.bru  02 Register User.bru  03 Auth - Login Usuario JWT.bru  03 Login User JWT.bru  04 Auth - Me.bru  04 Auth Me.bru  05 Admin Ping (Expected 403 with user token).bru  05 Auth - Admin Ping (403 token usuario).bru  06 Admin Ping (with admin token).bru  06 Auth - Admin Ping (token admin).bru  07 Auth - Login Admin JWT.bru  07 Login Admin JWT.bru  08 Get Users (admin token).bru  08 Users - Listar Usuarios (admin).bru  09 Deactivate User (admin token).bru  09 Users - Desactivar Usuario (admin).bru  10 Deactivate User (expected 403 with user token).bru  10 Users - Desactivar Usuario (403 token usuario).bru  11 Cuentas - Listar Cuentas.bru  12 Cuentas - Obtener Cuenta y Extractos.bru  13 Cuentas - Cargar Extracto Bancario.bru  14 Cuentas - Obtener Movimientos por Extracto.bru  15 Cuentas - Cargar a Base Consolidada.bru  16 Base Consolidada - Listar.bru  17 Base Consolidada - Actualizar Registro.bru  18 Base Consolidada - Agregar Adjunto.bru  19 Base Consolidada - Listar Adjuntos.bru  20 Base Consolidada - Registrar Actividad.bru  21 Base Consolidada - Listar Actividad.bru  README.md  bruno.json  collection.bru
db-migrations/: V10__expand_extracto_estado_length.sql  V3__seed_admin_user.sql  (+11 more)
(+5 files in other folders)
