[project]
name = "jf-portal-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-cors>=6.0.1",
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
]
